--- a/build.yaml
+++ b/build.yaml
@@ -1,6 +1,18 @@
 targets:
   $default:
     builders:
-      bloc_gen|event_generator:
+      event_generator|event_generator:
+        enabled: true
         generate_for:
-          - lib/**/*.dart
+          - example/lib/**.dart
+          - lib/**.dart
+          - test/**.dart
+
+builders:
+  event_generator:
+    import: "package:event_generator/builder.dart"
+    builder_factories: ["eventGenerator"]
+    build_extensions: {".dart": [".event_generator.g.part"]}
+    auto_apply: dependents
+    build_to: cache
+    applies_builders: ["source_gen|combining_builder"]
