--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,58 +1,16 @@
-name: bloc_gen
-description: "A new Flutter package project."
-version: 0.0.1
-homepage: null
-
+name: event_generator
+description: A package to generate event subclasses using build_runner
+version: 1.0.0
 environment:
-  sdk: ^3.6.0
-  flutter: ">=1.17.0"
+  sdk: ">=3.0.0 <4.0.0"
 
 dependencies:
-  analyzer: ^6.4.1
-  build: 
-  flutter:
-    sdk: flutter
+  build: ^2.4.1
+  source_gen: ^1.3.2
+  analyzer: ^5.13.0  # Using an older version that's compatible
 
 dev_dependencies:
-  build_runner: 
-  flutter_lints: ^5.0.0
-  flutter_test:
-    sdk: flutter
-  source_gen: null
-
-# For information on the generic Dart part of this file, see the
-# following page: https://dart.dev/tools/pub/pubspec
-# The following section is specific to Flutter packages.
-flutter: null
-
-
-
-# To add assets to your package, add an assets section, like this:
-# assets:
-#   - images/a_dot_burr.jpeg
-#   - images/a_dot_ham.jpeg
-#
-# For details regarding assets in packages, see
-# https://flutter.dev/to/asset-from-package
-#
-# An image asset can refer to one or more resolution-specific "variants", see
-# https://flutter.dev/to/resolution-aware-images
-# To add custom fonts to your package, add a fonts section here,
-# in this "flutter" section. Each entry in this list should have a
-# "family" key with the font family name, and a "fonts" key with a
-# list giving the asset and other descriptors for the font. For
-# example:
-# fonts:
-#   - family: Schyler
-#     fonts:
-#       - asset: fonts/Schyler-Regular.ttf
-#       - asset: fonts/Schyler-Italic.ttf
-#         style: italic
-#   - family: Trajan Pro
-#     fonts:
-#       - asset: fonts/TrajanPro.ttf
-#       - asset: fonts/TrajanPro_Bold.ttf
-#         weight: 700
-#
-# For details regarding fonts in packages, see
-# https://flutter.dev/to/font-from-package
+  build_runner: ^2.4.6
+  build_test: ^2.2.0
+  test: ^1.24.0
+  dart_style: ^2.3.1  # Explicitly defining
