--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,16 +1,15 @@
 name: event_generator
-description: A package to generate event subclasses using build_runner
+description: Generates event classes from factory constructors
 version: 1.0.0
 environment:
   sdk: ">=3.0.0 <4.0.0"
 
 dependencies:
+  analyzer: ^6.5.0
   build: ^2.4.1
+  equatable: ^2.0.7
   source_gen: ^1.3.2
-  analyzer: ^5.13.0  # Using an older version that's compatible
 
 dev_dependencies:
   build_runner: ^2.4.6
   build_test: ^2.2.0
-  test: ^1.24.0
-  dart_style: ^2.3.1  # Explicitly defining
