--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,21 +1,30 @@
 name: fbloc_event_gen
 description: Generates STATE, EVENT AND BLOC from a SINGLE LINE OF STATE VARIABLE and can generate custom event classes from factory constructors.
-version: 3.0.2
+version: 3.0.2+12
+homepage: https://github.com/naveen-as-a-geek-wolf/bloc_gen
 repository: https://github.com/naveen-as-a-geek-wolf/bloc_gen
 issue_tracker: https://github.com/naveen-as-a-geek-wolf/bloc_gen/issues
 environment:
   sdk: ">=3.0.0 <4.0.0"
 
 dependencies:
-  analyzer: ^6.5.0
-  build: ^2.4.1
+  analyzer: ^7.2.0
+  build: ^2.4.2
   equatable: ^2.0.7
-  source_gen: ^1.3.2
+  source_gen: ^2.0.0
   build_runner: ^2.4.6
   
 
 dev_dependencies:
- 
-
   build_test: ^2.2.0
+screenshots:
+  - description: The fbloc_event_gen package logo.
+    path: images/fbloc_event_gen_logo.webp
   
+platforms:
+  android:
+  ios:
+  web:
+  windows:
+  macos:
+  linux:
