--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,11 +29,4 @@ platforms:
   macos:
   linux:
 
-topics:
-  [
-    bloc_generator,
-    bloc_event_generator,
-    bloc_state_generator,
-    freezed,
-    build_runner_generator
-  ]
+topics: [bloc_generator,bloc_event_generator,bloc_state_generator,freezed,build_runner_generator]
