--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,6 +1,6 @@
 name: fbloc_event_gen
-description: Intended to replace @freezed BLOC. Generates STATE, EVENT AND BLOC from a SINGLE LINE OF STATE VARIABLE and can generate custom event classes from factory constructors.
-version: 3.2.6+1
+description: Generates STATE, EVENT AND BLOC from a SINGLE LINE OF STATE VARIABLE and can generate custom event classes from factory constructors. Eliminates boilerplate code in Flutter BLoC development.
+version: 3.2.7
 homepage: https://github.com/navaneethkrishnaindeed/bloc_gen
 repository: https://github.com/navaneethkrishnaindeed/bloc_gen
 issue_tracker: https://github.com/navaneethkrishnaindeed/bloc_gen/issues
@@ -29,4 +29,4 @@ platforms:
   macos:
   linux:
 
-topics: [bloc-generator, bloc-event-generator, bloc-state-generator, freezed, build-runner-generator]
+topics: [bloc-generator, bloc-event-generator, bloc-state-generator, build-runner-generator]
