--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,6 +1,6 @@
 name: fbloc_event_gen
-description: Generates STATE, EVENT AND BLOC from a SINGLE LINE OF STATE VARIABLE and can generate custom event classes from factory constructors. Eliminates boilerplate code in Flutter BLoC development.
-version: 3.2.7+1
+description: Generates STATE, EVENT AND BLOC from a SINGLE LINE OF STATE VARIABLE and can generate custom event classes from factory constructors
+version: 3.2.8
 homepage: https://github.com/navaneethkrishnaindeed/bloc_gen
 repository: https://github.com/navaneethkrishnaindeed/bloc_gen
 issue_tracker: https://github.com/navaneethkrishnaindeed/bloc_gen/issues
